@@ -246,6 +246,7 @@ gboolean vips_foreign_is_a_buffer( const char *loader,
  * @VIPS_SAVEABLE_RGB: 1 or 3 bands (eg. PPM) 
  * @VIPS_SAVEABLE_RGBA: 1, 2, 3 or 4 bands (eg. PNG)
  * @VIPS_SAVEABLE_RGBA_ONLY: 3 or 4 bands (eg. WEBP)
+ * @VIPS_SAVEABLE_RGBA_STRICT: 4 bands (eg. FLIF)
  * @VIPS_SAVEABLE_RGB_CMYK: 1, 3 or 4 bands (eg. JPEG)
  * @VIPS_SAVEABLE_ANY: any number of bands (eg. TIFF)
  *
@@ -256,6 +257,7 @@ typedef enum {
 	VIPS_SAVEABLE_RGB,
 	VIPS_SAVEABLE_RGBA,
 	VIPS_SAVEABLE_RGBA_ONLY,
+	VIPS_SAVEABLE_RGBA_STRICT,
 	VIPS_SAVEABLE_RGB_CMYK,
 	VIPS_SAVEABLE_ANY,
 	VIPS_SAVEABLE_LAST
