@@ -58,6 +58,7 @@ vips_saveable_get_type( void )
 			{VIPS_SAVEABLE_RGB, "VIPS_SAVEABLE_RGB", "rgb"},
 			{VIPS_SAVEABLE_RGBA, "VIPS_SAVEABLE_RGBA", "rgba"},
 			{VIPS_SAVEABLE_RGBA_ONLY, "VIPS_SAVEABLE_RGBA_ONLY", "rgba-only"},
+			{VIPS_SAVEABLE_RGBA_STRICT, "VIPS_SAVEABLE_RGBA_STRICT", "rgba-strict"},
 			{VIPS_SAVEABLE_RGB_CMYK, "VIPS_SAVEABLE_RGB_CMYK", "rgb-cmyk"},
 			{VIPS_SAVEABLE_ANY, "VIPS_SAVEABLE_ANY", "any"},
 			{VIPS_SAVEABLE_LAST, "VIPS_SAVEABLE_LAST", "last"},
